--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ p {
 	object-fit: cover;
 	width: 100%;
 	height: 30vh;
+	margin-top: 1.25em;
 }
 
 .wrap {
@@ -2626,9 +2627,9 @@ header.major h2 {
 header.major h2:after {
 	display: block;
 	content: '';
-	width: 3.25em;
+	width: 10em;
 	height: 2px;
-	margin: 0.7em 0 1em 0;
+	margin: 0.5em 0 1em 0;
 	border-radius: 2px;
 }
 
@@ -2763,7 +2764,9 @@ table th {
 table thead {
 	border-bottom-color: rgba(255, 255, 255, 0.35);
 }
-
+.aaa{
+	margin: 4em;
+}
 table tfoot {
 	border-top-color: rgba(255, 255, 255, 0.35);
 }
@@ -3208,8 +3211,8 @@ body.is-preload #header.alt .logo {
 	max-width: calc(100% - 4em);
 	padding: 1em;
 	background-color: rgba(222, 222, 222, 0.25);
-	border-top-left-radius: 0.25em;
-	border-top-right-radius: 0.25em;
+	border-top-left-radius: 0.75em;
+	border-top-right-radius: 0.75em;
 	cursor: default;
 	text-align: center;
 }
@@ -3581,6 +3584,8 @@ body.is-preload #header.alt .logo {
 	padding: 5em 5em 3em 5em;
 	border-top: solid 1px #dddddd;
 	background-color: #f7f7f7;
+	border-bottom-left-radius: 0.75em;
+	border-bottom-right-radius: 0.75em;
 }
 
 #main>.main:first-child {
@@ -3689,8 +3694,6 @@ body.is-preload #header.alt .logo {
 	-ms-flex-wrap: wrap;
 	flex-wrap: wrap;
 	padding: 5em 5em 3em 5em;
-	width: calc(100% + 2em);
-	margin: 0 0 3em -2em;
 	background-color: #000000;
 }
 
@@ -3700,6 +3703,7 @@ body.is-preload #header.alt .logo {
 }
 
 #footer .copyright {
+
 	width: 100%;
 	margin: 2.5em 0 2em 0;
 	font-size: 0.8em;
