--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2785,7 +2785,11 @@ table.alt tbody tr td {
 }
 
 /* Features */
-
+.projects {
+	width: 50%
+	box-shadow: inset 0 0 0 1px #dddddd;
+    color: #636363;
+}
 .features {
 	display: -moz-flex;
 	display: -webkit-flex;
