--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,25 +81,6 @@ html {
 	box-sizing: border-box;
 }
 
-*,
-*:before,
-*:after {
-	box-sizing: inherit;
-}
-
-body.is-preload *,
-body.is-preload *:before,
-body.is-preload *:after {
-	-moz-animation: none !important;
-	-webkit-animation: none !important;
-	-ms-animation: none !important;
-	animation: none !important;
-	-moz-transition: none !important;
-	-webkit-transition: none !important;
-	-ms-transition: none !important;
-	transition: none !important;
-}
-
 /* Type */
 @media screen and (max-width: 1680px) {
 
@@ -133,14 +114,25 @@ body.is-preload *:after {
 	}
 
 }
-
+.card {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid #e9e9e9;
+    border-radius: 8px;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
+    height: 100%;
+    box-shadow: 0 25px 20px -25px rgb(0 0 0 / 20%), 0 0 15px rgb(0 0 0 / 5%);
+}
 a {
 	-moz-transition: color 0.2s ease, border-bottom 0.2s ease;
 	-webkit-transition: color 0.2s ease, border-bottom 0.2s ease;
 	-ms-transition: color 0.2s ease, border-bottom 0.2s ease;
 	transition: color 0.2s ease, border-bottom 0.2s ease;
 	text-decoration: none;
-	border-bottom: dotted 1px;
 	color: inherit;
 }
 
@@ -921,26 +913,17 @@ input[type="radio"]:focus+label:before {
 	white-space: nowrap;
 }
 
-.name2 {
+.copyright {
 	margin-top: 0;
 	white-space: nowrap;
-}
-
-ol {
-	list-style: decimal;
-	margin: 0 0 2em 0;
-	padding-left: 1.25em;
+	opacity: 0.7;
 }
 
 ol li {
 	padding-left: 0.25em;
 }
 
-ul {
-	list-style: disc;
-	margin: 0 0 2em 0;
-	padding-left: 1em;
-}
+
 
 ul li {
 	padding-left: 0.5em;
@@ -1334,13 +1317,18 @@ table.alt tbody tr td {
 	align-items: stretch;
 }
 .ap{
-	margin-top: 10px;
+	margin-top: 20px;
 }
 .skill-detail {
 	opacity: 0.7;
 	margin: 0;
 }
 .skill-detail-a {
+	margin: 10px;
+	margin-bottom: 3px;
+	opacity: 0.7;
+}
+.project-detail {
 	margin: 10px;
 	margin-bottom: 3px;
 	opacity: 0.7;
@@ -1550,6 +1538,10 @@ table.alt tbody tr td {
 }
 
 .skill-name {
+	margin-top: 10px;
+	margin-bottom: 3.5px;
+}
+.project-name {
 	margin-top: 10px;
 	margin-bottom: 3.5px;
 }
